<resources>
    <string name="fabitipFabiUtil10">%s數量</string>
    <string name="fabitipFabiUtil11">%s自動取消</string>
    <string name="fabiorderRecordActivity10">訂單狀態</string>
    <string name="fabiorderRecordActivity100">委託類型</string>
    <string name="fabitipFabiUtil12">請輸入%s金額</string>
    <string name="fabitipFabiUtil13">請輸入%s數量</string>
    <string name="fabifabi_include_order_record_info40">總金額</string>
    <string name="fabiorderRecordDetailActivity25">當日取消訂單三次將凍結法幣交易功能，確定取消嗎？ </string>
    <string name="fabifabiOrderStatusEnum7">凍結中</string>
    <string name="fabipublishActivity5">收款方式</string>
    <string name="fabifabiOrderStatusEnum8">等待對方放幣</string>
    <string name="fabipublishActivity4">支付方式</string>
    <string name="fabifabiOrderStatusEnum5">申訴中</string>
    <string name="fabipublishActivity7">添加收款方式</string>
    <string name="fabifabiOrderStatusEnum6">已取消</string>
    <string name="fabipublishActivity6">添加支付方式</string>
    <string name="fabipublishActivity9">請輸入%s單價</string>
    <string name="fabipublishActivity8">發佈%s數量</string>
    <string name="fabifabiOrderStatusEnum9">對方已付款</string>
    <string name="fabifabi_activity_order160">可交易數量（USDT）</string>
    <string name="fabifabi_dialog_quick_buy80">確認購買</string>
    <string name="fabifabi_dialog_quick_buy190">付款方式</string>
    <string name="fabifabi_recy_item_buy_sell260">單價</string>
    <string name="fabifabi_activity_order600">交易金額：</string>
    <string name="fabifabi_dialog_publish_confirm220">取消</string>
    <string name="fabifabiOrderStatusEnum3">待放幣</string>
    <string name="fabipublishActivity1">發佈</string>
    <string name="fabifabiOrderStatusEnum4">已完成</string>
    <string name="fabifabiOrderStatusEnum1">待付款</string>
    <string name="fabipublishActivity3">出售</string>
    <string name="fabifabiOrderStatusEnum2">等待對方付款</string>
    <string name="fabipublishActivity2">購買</string>
    <string name="fabifabi_bottom_sheet_trade260">全部購買</string>
    <string name="fabifabi_dialog_filter270">重置</string>
    <string name="fabifabi_bottom_sheet_trade420">交易金額</string>
    <string name="fabifabi_fragment_main100">自選區</string>
    <string name="fabifabi_fragment_quick100">我要買</string>
    <string name="fabifabi_fragment_quick101">我要賣</string>
    <string name="fabiorderRecordDetailActivity19">請在</string>
    <string name="fabiorderActivity12">您輸入的金額大於最大金額</string>
    <string name="fabiorderRecordDetailActivity18">申訴中，申述參考號：%s</string>
    <string name="fabiorderRecordDetailActivity15">內完成支付。 \n如有問題您可聯繫對方</string>
    <string name="fabiorderRecordDetailActivity14">等待對方付款，%s將於</string>
    <string name="fabiorderActivity11">請輸入出售金額</string>
    <string name="fabiorderRecordDetailActivity17">訂單已取消，無法查看支付信息</string>
    <string name="fabiorderActivity10">請輸入購買金額</string>
    <string name="fabiorderRecordDetailActivity16">訂單已完成</string>
    <string name="fabiorderRecordDetailActivity22">標記已付款</string>
    <string name="fabiorderRecordDetailActivity21">取消訂單</string>
    <string name="fabifabi_dialog_quick_buy100">關閉</string>
    <string name="fabifabi_recy_item_order_record210">限額</string>
    <string name="fabiorderRecordDetailActivity24">後自動放幣</string>
    <string name="fabiorderRecordDetailActivity23">已付款，等待對方放幣，系統將於</string>
    <string name="fabifabi_activity_publish530">請輸入要備註信息（選填）</string>
    <string name="fabiorderRecordDetailActivity20">內向賣家付款，成功後請點擊“標記已付款”告知對方進行放幣如對訂單有異議可取消訂單\n每天最多可取消3次，超過3次將自動凍結賬號法幣交易功能， 24小時後自動解除。 </string>
    <string name="fabiquickBuyFragment7">按數量</string>
    <string name="fabiquickBuyFragment5">購買金額</string>
    <string name="fabiquickBuyFragment51">售出金額</string>
    <string name="fabifabi_dialog_quick_buy460">實付款</string>
    <string name="fabifabi_activity_order850">下單</string>
    <string name="fabiquickBuyFragment6">按金額</string>
    <string name="fabifabi_activity_order730">資金密碼</string>
    <string name="fabipublishRecordActivity1">記錄</string>
    <string name="fabiorderDetailBean1">民航路</string>
    <string name="fabiorderDetailBean2">民生銀行</string>
    <string name="fabifabi_include_order_record_info620">下單時間</string>
    <string name="fabifabi_dialog_publish_confirm20">下單確認</string>
    <string name="fabifabi_dialog_publish_confirm240">確定</string>
    <string name="fabifabi_activity_publish190">發佈購買數量</string>
    <string name="fabifabi_bottom_sheet_trade200">請輸入購買單價</string>
    <string name="fabiorderRecordDetailActivity9">銀行卡 </string>
    <string name="fabiorderRecordDetailActivity8">支付寶 </string>
    <string name="fabiorderRecordDetailActivity7">支付寶收款碼</string>
    <string name="fabiorderRecordDetailActivity5">微信 </string>
    <string name="fabiorderRecordDetailActivity4">微信收款碼</string>
    <string name="fabiorderRecordDetailActivity3">請掃描收款二維碼支付</string>
    <string name="fabiorderRecordDetailActivity1">訂單詳情</string>
    <string name="fabibuySellFragment11">銀行卡</string>
    <string name="fabibuySellFragment12">提醒</string>
    <string name="fabifabi_include_order_record_info440">備註</string>
    <string name="fabifabi_dialog_filter100">請輸入最小目標金額</string>
    <string name="fabibuySellFragment15">賣家僅支持通過%s由您付款,您需要添加並激活相應付款方式</string>
    <string name="fabibuySellFragment16">您有持倉單，不能交易</string>
    <string name="fabibuySellFragment13">買家僅支持通過%s向您付款,您需要添加並激活相應收款方式</string>
    <string name="fabibuySellFragment14">添加</string>
    <string name="fabifabi_dialog_filter_bottom60">法幣</string>
    <string name="fabifabi_activity_order120">單價</string>
    <string name="fabifabi_fragment_main80">閃電區</string>
    <string name="fabifabi_fragment_quick_buy300">請輸入</string>
    <string name="fabitipFabiUtil1">撥打電話</string>
    <string name="fabibuySellFragment7">禁止向自己發起交易</string>
    <string name="fabitipFabiUtil2">全部%s</string>
    <string name="fabibuySellFragment6">出售</string>
    <string name="fabitipFabiUtil3">單價 $%s</string>
    <string name="fabitipFabiUtil4">請輸入%s%s</string>
    <string name="fabitipFabiUtil51">請輸入%s</string>
    <string name="fabibuySellFragment8">數據獲取失敗，請刷新頁面</string>
    <string name="fabitipFabiUtil5">金額</string>
    <string name="fabifabi_fragment_fabi100">我要賣</string>
    <string name="fabitipFabiUtil6">數量</string>
    <string name="fabitipFabiUtil61">剩餘</string>
    <string name="fabifabi_include_order_record_info310">對方信息</string>
    <string name="fabitipFabiUtil7">實際%s</string>
    <string name="fabifabi_dialog_appeal60">請輸入申訴理由</string>
    <string name="fabitipFabiUtil8">限額 $%s-$%s</string>
    <string name="fabitipFabiUtil9">法幣計價</string>
    <string name="fabifabi_include_order_record_info710">付款參考號</string>
    <string name="fabifabi_recy_item_order_record250">單價</string>
    <string name="fabibuySellFragment2">成交率</string>
    <string name="fabibuySellFragment5">購買</string>
    <string name="fabibuySellFragment4">限額</string>
    <string name="fabibuySellFragment1">成交</string>
    <string name="fabifabi_bottom_sheet_trade490">30秒後自動取消</string>
    <string name="fabifabi_fragment_quick_buy120">泰達幣</string>
    <string name="fabipublishActivity22">銀聯</string>
    <string name="fabipublishActivity21">支付寶</string>
    <string name="fabipublishActivity20">微信</string>
    <string name="fabiorderRecordActivity1">訂單記錄</string>
    <string name="fabiorderRecordActivity2">發佈訂單</string>
    <string name="fabiorderRecordActivity3">未付款</string>
    <string name="fabiorderRecordActivity4">已付款</string>
    <string name="fabifabi_fragment_fabi210">發佈交易</string>
    <string name="fabiorderRecordActivity8">買入</string>
    <string name="fabiorderRecordActivity9">賣出</string>
    <string name="fabiorderActivity9">請輸入出售數量</string>
    <string name="fabiorderRecordDetailActivity11">後自動確認\n請確定收款無誤後，請確認放行，如收款有誤，您可以提出申訴</string>
    <string name="fabiorderRecordDetailActivity10">系統將在</string>
    <string name="fabifabi_activity_order460">全部</string>
    <string name="fabiorderActivity7">數量</string>
    <string name="fabiorderRecordDetailActivity13">放幣</string>
    <string name="fabiorderActivity8">請輸入購買數量</string>
    <string name="fabiorderRecordDetailActivity12">申訴</string>
    <string name="fabiorderActivity5">買家姓名</string>
    <string name="fabiorderActivity6">購買數量</string>
    <string name="fabiorderActivity61">售出數量</string>
    <string name="fabiorderActivity3">出售USDT</string>
    <string name="fabiorderActivity4">賣家姓名</string>
    <string name="fabiorderActivity1">秒後關閉訂單</string>
    <string name="fabiorderActivity2">購買USDT</string>
    <string name="fabipublishActivity19">請添加支付方式</string>
    <string name="fabipublishActivity18">最小限額不允許大於最大限額</string>
    <string name="fabifabi_activity_order100">限額</string>
    <string name="fabipublishActivity17">總額不能小於最低限額</string>
    <string name="fabipublishActivity16">最大限額不能爲0</string>
    <string name="fabifabi_fragment_quick_buy520">交易0手續費</string>
    <string name="fabipublishActivity15">請輸入最高限額</string>
    <string name="fabipublishActivity14">最小限額不能爲0</string>
    <string name="fabipublishActivity13">請輸入最低限額</string>
    <string name="fabipublishActivity12">最小發布數量爲</string>
    <string name="fabifabi_dialog_phone40">聯繫對方</string>
    <string name="fabitipFabiUtil20">密碼格式錯誤</string>
    <string name="fabipublishActivity11">請輸入數量</string>
    <string name="fabifabi_dialog_send_coin40">確認放幣</string>
    <string name="fabitipFabiUtil21">保存到相冊失敗</string>
    <string name="fabipublishActivity10">商家自由%sUSDT，交易更靈活更便捷</string>
    <string name="fabitipFabiUtil22">存儲</string>
    <string name="fabitipFabiUtil23">點擊保存二維碼</string>
    <string name="fabifabi_include_order_record_info530">訂單編號</string>
    <string name="fabifabi_fragment_fabi80">我要買</string>
    <string name="fabipublishRecordFragment1">撤單</string>
    <string name="fabipublishRecordFragment2">已完成</string>
    <string name="fabipublishRecordFragment3">已撤單</string>
    <string name="fabipublishRecordFragment4">確認撤銷訂單嗎？ </string>
    <string name="fabifabi_include_order_record_status180">付款成功後，請點擊“標記已付款”告知對方進行放幣\n如對訂單有異議可取消訂單\n每天最多可取消3次， 超過3次將自動凍結賬號法幣交易功能，24小時後自動解除</string>
    <string name="fabifabi_bottom_sheet_trade80">單價 2,990.00USDT</string>
    <string name="fabifabi_activity_publish310">最高</string>
    <string name="fabitipFabiUtil14">不能大於最大限額</string>
    <string name="fabitipFabiUtil15">不能小於最小限額</string>
    <string name="fabitipFabiUtil16">單子剩餘數量不足</string>
    <string name="fabifabi_activity_publish270">最低</string>
    <string name="fabitipFabiUtil17">請輸入資金密碼</string>
    <string name="fabitipFabiUtil18">%s單價</string>
    <string name="fabitipFabiUtil19">%s金額</string>
    <string name="fabifabi_activity_order510">法幣計價</string>
    <string name="fabifabiOrderStatusEnum90">全部</string>
    <string name="fabiorderActivity66">購買數量(USDT)</string>
    <string name="fabiorderActivity77">出售數量(USDT)</string>
    <string name="fabi_quick">快捷區暫未開放! </string>
    <string name="fabi_xinshou">新手指引</string>
    <string name="fabi_goumai">購買</string>
    <string name="fabi_chushou">出售</string>
    <string name="fabi_sensu">申訴中</string>
    <string name="fabi_already">已完成</string>
    <string name="fabi_order">法幣訂單</string>
    <string name="fabi_yifukuan">已付款</string>
    <string name="fabi_fuzhi">文本已經複製成功！ </string>
    <string name="fabi_type">類型</string>
    <string name="fabi_jiaoyiduixiang">交易對象</string>
    <string name="fabi_jiaoyijine">交易金額</string>
    <string name="fabi_order_num">訂單號</string>
    <string name="fabi_xianalready">只顯示我已付款</string>
    <string name="fabi_daizhifu">只顯示待支付</string>
    <string name="fabi_solo">搜索</string>
    <string name="fabi_queding">確定</string>
    <string name="fabi_zhuangtai">狀態</string>
    <string name="fabi_quanbu">全部</string>
    <string name="fabi_bizhong">幣種</string>
    <string name="fabi_ordertype">訂單類型</string>
    <string name="fabi_all">全部</string>
    <string name="fabi_buy">買入</string>
    <string name="fabi_sell">賣出</string>
    <string name="fabi_queren">確定</string>
    <string name="fabi_price">單價</string>
    <string name="fabiUsdt">剩餘(USDT)</string>
    <string name="fabiCny">限額(CNY)</string>
</resources>