<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30pt"
    android:paddingEnd="30pt"
    android:background="@color/lib_bg"
    android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:text="@string/fabi_bizhong"
    android:layout_marginStart="20pt"
    android:layout_marginTop="40pt"
    android:textColor="@color/libTextWhite"
    android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20pt"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/myradio"
            android:layout_width="match_parent"
            android:layout_marginTop="20pt"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/rb_quan"
                android:layout_width="0pt"
                android:text="@string/fabi_quanbu"
                android:button="@null"
                android:padding="10pt"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/fabi_selector_filter"
                android:textColor="@drawable/fabi_selector_text"
                android:layout_height="match_parent"/>

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="0pt"
                android:text="USDT"
                android:button="@null"
                android:padding="10pt"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/fabi_selector_filter"
                android:textColor="@drawable/fabi_selector_text"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="0pt"
                android:text="LCNY"
                android:button="@null"
                android:padding="10pt"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/fabi_selector_filter"
                android:textColor="@drawable/fabi_selector_text"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="0pt"
                android:text="BTC"
                android:button="@null"
                android:padding="10pt"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/fabi_selector_filter"
                android:textColor="@drawable/fabi_selector_text"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="0pt"
                android:text="ETH"
                android:button="@null"
                android:padding="10pt"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/fabi_selector_filter"
                android:textColor="@drawable/fabi_selector_text"
                android:layout_height="match_parent"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/fabi_zhuangtai"
        android:textColor="@color/libTextWhite"
        android:layout_marginTop="40pt"
        android:layout_height="wrap_content"/>
<RadioGroup
    android:id="@+id/rg_status"
    android:layout_width="match_parent"
    android:layout_marginTop="30pt"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rb_woyi"
        android:layout_width="wrap_content"
        android:text="@string/fabi_xianalready"
        android:button="@null"
        android:padding="20pt"
        android:gravity="center"
        android:background="@drawable/fabi_selector_filter"
        android:textColor="@drawable/fabi_selector_text"
        android:layout_height="match_parent"/>
    <RadioButton
        android:id="@+id/rb_daizhifu"
        android:layout_width="wrap_content"
        android:text="@string/fabi_daizhifu"
        android:button="@null"
        android:padding="20pt"
        android:gravity="center"
        android:layout_marginStart="20pt"
        android:background="@drawable/fabi_selector_filter"
        android:textColor="@drawable/fabi_selector_text"
        android:layout_height="match_parent"/>
</RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/fabi_solo"
        android:textColor="@color/libTextWhite"
        android:layout_marginTop="50pt"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_dingdan"
        android:layout_width="match_parent"
        android:hint="@string/fabi_order_num"
        android:textColorHint="@color/libTextGray"
        android:paddingStart="30pt"
        android:background="@null"
        android:layout_marginStart="20pt"
        android:layout_marginEnd="80pt"
        android:layout_marginTop="40pt"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"/>
<View
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:background="@color/lib_bg"
    android:layout_height="0dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80pt"
            android:background="@color/lib_bg"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btReset"
                style="@style/fabiButtonStyle.Cancel"
                android:layout_width="0pt"
                android:gravity="center"
                android:textColor="@color/libTextWhite"
                android:layout_height="match_parent"
                android:layout_marginEnd="60pt"
                android:layout_weight="1"
                android:text="@string/fabifabi_dialog_filter270"/>

            <Button
                android:id="@+id/btSubmit"
                style="@style/fabiButtonStyle.Sure"
                android:layout_width="0pt"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fabi_queding"/>

        </LinearLayout>
    </LinearLayout>



