<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fabiBgDeep"
    android:paddingStart="20pt"
    android:paddingEnd="20pt"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image1"
            android:layout_width="40pt"
            android:layout_height="40pt"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:text="USDT"
            android:textColor="@color/libTextWhite"
            android:layout_marginStart="20pt"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="0pt"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/fabi_price"
            android:textColor="@color/libTextWhite"
            android:layout_height="wrap_content"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0pt"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/fabi_type"
            android:textColor="@color/libTextWhite"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_shengyu"
            android:layout_width="wrap_content"
            android:textColor="@color/libTextWhite"
            android:text="@string/fabiUsdt"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_xiane"
            android:layout_width="wrap_content"
            android:text="@string/fabiCny"
            android:textColor="@color/libTextWhite"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0pt"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_height="match_parent">
      <TextView
          android:id="@+id/tv_type"
          android:layout_width="wrap_content"
          android:text="@string/fabipublishActivity2"
          android:textColor="@color/libGreen1"
          android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_shengyu_content"
            android:layout_width="wrap_content"
            android:textColor="@color/libTextWhite"
            android:text="36234"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_xiane_content"
            android:layout_width="wrap_content"
            android:text="3000.0-34534345 CNY"
            android:textColor="@color/libTextWhite"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0pt"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:textColor="@color/libGreen1"
            android:text="6.454 CNY"
            android:textSize="32pt"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/btSale"
            android:layout_width="140pt"
            android:layout_height="56pt"
            android:background="@drawable/fabi_solid_ff5_bg"
            android:gravity="center"
            android:layout_marginTop="20pt"
            android:text="@string/fabibuySellFragment6"
            android:textColor="@color/commonWhite"
            android:textSize="28pt" />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_marginBottom="10pt"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_alipay"
            android:layout_width="32pt"
            android:layout_height="32pt"
            android:src="@mipmap/lib_icon_alipay"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="32pt"
            android:layout_height="32pt"
            android:layout_marginStart="20pt"
            android:src="@mipmap/lib_icon_wx"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_bank"
            android:layout_width="32pt"
            android:layout_height="32pt"
            android:layout_marginStart="20pt"
            android:layout_marginEnd="20pt"
            android:src="@mipmap/fabi_yinhangka" />
    </LinearLayout>
</LinearLayout>
